clusters/production/media/wyzebridge/wyzebridge-service.yaml
kind: Service 
apiVersion: v1 
metadata:
  name: wyzebridge
spec:
  # Expose the service on a static port on each node
  # so that we can access the service from outside the cluster 
  type: ClusterIP

  # When the node receives a request on the static port (30163)
  # "select pods with the label 'app' set to 'echo-hostname'"
  # and forward the request to one of them
  selector:
    app: wyzebridge

  ports:
    # Three types of ports for a service
    # nodePort - a static port assigned on each the node
    # port - port exposed internally in the cluster
    # targetPort - the container port to send requests to
    - name: wyzebridge-5000
      port: 5000
      targetPort: 5000
    - name: wyzebridge-1935
      port: 1935
      targetPort: 1935
    - name: wyzebridge-8554
      port: 8554
      targetPort: 8554
    - name: wyzebridge-8888
      port: 8888
      targetPort: 8888
