clusters/production/media/wyzebridge/wyzebridge-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wyzebridge
  namespace: default
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - wyzebridge.rees.ca
  rules:
  - backendRefs:
    - name: wyzebridge
      port: 5000
