clusters/production/media/wyzebridge/wyzebridge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wyzebridge-ingress
  namespace: default
spec:
  ingressClassName: internal-nginx  
  rules:
  - host: "wyzebridge.rees.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wyzebridge
            port:
              number: 5000
